@@ -1,6 +1,8 @@
 [12.1.1]
   * Fixed a bug of the team_graphic painting for right side teams.
 
+  * added an auto-quit mode option.
+
 [12.1.0]
   * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.1.0
     or later is required to build the new logplayer. You can disable
